--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="background">
+      <h1>Design your house</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+        Voluptate minus autem ex maxime ipsam
+      </p>
+      <div class="button-div">
+        <button>WATCH MORE</button>
+        <button>SUBSCRIBE</button>
+      </div>
+    </div>
+  </body>
 </html>
